correct for new windown icon being 1px too high

--- a/css/main.css
+++ b/css/main.css
@@ -394,6 +394,7 @@ em {
 }
 
 .fa-external-link {
+  font-size: .9em;
   color: #999;
 }
 
